# btc-analytics

./: .gitignore  pyproject.toml
scripts/: extract.ipynb  regras_de_negocio.py
